<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="terms_of_use" translatable="false">Пользовательское соглашение</string>
    <string name="yp_android_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="yp_email">cerj275@yandex.ru</string>
    <string name="feedback_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="feedback_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_use_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_search_text">Очистить поисковый запрос</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="search_message">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="title_dialog_new_playlist">Завершить создание плейлиста?</string>
    <string name="message_dialog_new_playlist">Все не сохранненые данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_created">"Плейлсит %1$s создан"</string>
    <string name="track_contained">"Трек уже добавлен в плейлист %1$s"</string>
    <string name="track_added">"Добавлено в плейлист %1$s"</string>
    <string name="empty_playlist">В этом плейлисте нет ни одного трека</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty_playlist_to_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейст</string>
    <string name="confirm_delete_playlist">Хотите удалить плейлист %1$s?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="playlist_saved">Плейлсит %1$s сохранен</string>


    <plurals name="number_of_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="duration_of_tracks">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>