<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_16"
    android:paddingRight="@dimen/padding_16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textFontWeight="500"
        android:textSize="@dimen/main_menu_textSize" />

    <Button
        android:id="@+id/buttonSearch"
        style="@style/MainMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/buttonMediaLibrary"
        style="@style/MainMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_library" />

    <Button
        android:id="@+id/buttonSettings"
        style="@style/MainMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>