<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/ic_arrow_back"
            app:tint="?attr/colorOnSecondary"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textViewTopBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingStart="12dp"
            android:text="@string/settings"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yp_white"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:letterSpacing="0"
        android:paddingStart="@dimen/padding_16"
        android:text="@string/dark_theme"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:textSize="@dimen/settings_menu_textSize"
        android:thumbTint="?attr/thumbTint"
        android:trackTint="?attr/trackTint"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textViewShare"
        style="@style/SettingsMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/textViewSupport"
        style="@style/SettingsMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/textViewTermsOfUse"
        style="@style/SettingsMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />
</LinearLayout>