<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context="com.example.playlistmaker.media.ui.NewPlaylistFragment">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/ic_arrow_back"
            app:tint="?attr/colorOnSecondary"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textViewTopBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:paddingStart="12dp"
            android:text="@string/new_playlist"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewAddCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_add_cover"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/TextFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/yp_black"
        app:hintTextColor="@color/yp_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAddCover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_name"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        style="@style/TextFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/yp_black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/yp_blue"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutName"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutName"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPlaylistDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_description"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCreateNewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_create_playlist"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>