<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/ic_arrow_back"
            app:tint="?attr/colorOnSecondary"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/textViewTopBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_14"
            android:paddingStart="12dp"
            android:text="@string/search"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_8"
            android:background="@drawable/bg_search"
            android:backgroundTint="?attr/colorBackgroundFloating"
            android:drawableStart="@drawable/ic_search_small"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"
            android:paddingStart="12dp"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textCursorDrawable="@drawable/ic_cursor"
            tools:ignore="Autofill,RtlSymmetry" />

        <ImageView
            android:id="@+id/imageViewClearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/clear_search_text"
            android:src="@drawable/ic_search_clear"
            android:visibility="gone"
            app:tint="?attr/colorPrimaryVariant" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_16">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/linearLayoutNothingFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_120"
                android:layout_marginTop="@dimen/margin_102"
                android:src="@drawable/nothing_found"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/ErrorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/padding_16"
                android:text="@string/nothing_found" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutNoInternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_120"
                android:layout_marginTop="@dimen/margin_102"
                android:src="@drawable/no_internet"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/ErrorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/padding_16"
                android:text="@string/no_internet" />

            <Button
                android:id="@+id/buttonRefreshSearch_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_24"
                android:backgroundTint="?attr/colorButtonNormal"
                android:fontFamily="@font/ys_display_medium"
                android:letterSpacing="0"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textColor="?attr/colorSecondary"
                android:textFontWeight="500"
                android:textSize="@dimen/refresh_button_text_size"
                app:cornerRadius="@dimen/refresh_button_corner_radius" />
        </LinearLayout>


    </FrameLayout>
</LinearLayout>