<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_4"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSecondary" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/right_border_24"
            app:layout_constraintStart_toEndOf="@id/left_border_24"
            app:layout_constraintTop_toBottomOf="@id/buttonBack"
            app:srcCompat="@drawable/ic_placeholder" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:lines="1"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_22"
            app:fontWeight="500"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/right_border_24"
            app:layout_constraintStart_toEndOf="@id/left_border_24"
            app:layout_constraintTop_toBottomOf="@id/cover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:lines="1"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_14"
            app:fontWeight="400"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/top_barrier"
            app:layout_constraintStart_toEndOf="@id/left_border_24"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="The Beatles" />

        <ImageView
            android:id="@+id/imageViewAddToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="queueButton"
            app:layout_constraintBottom_toBottomOf="@id/play_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/left_border_24"
            app:layout_constraintTop_toTopOf="@id/play_button"
            app:srcCompat="@drawable/ic_queue" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:tag="playButton"
            app:layout_constraintEnd_toStartOf="@id/favorite_button"
            app:layout_constraintStart_toEndOf="@id/imageViewAddToPlaylist"
            app:layout_constraintTop_toBottomOf="@id/top_barrier"
            app:srcCompat="@drawable/ic_play"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="favoriteButton"
            app:layout_constraintBottom_toBottomOf="@id/play_button"
            app:layout_constraintEnd_toStartOf="@id/right_border_24"
            app:layout_constraintTop_toTopOf="@id/play_button"
            app:srcCompat="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/playback_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:fontFamily="@font/ys_display_medium"
            android:tag="playbackTime"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_14"
            app:fontWeight="500"
            app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
            app:layout_constraintEnd_toStartOf="@id/right_border_24"
            app:layout_constraintStart_toEndOf="@id/left_border_24"
            app:layout_constraintTop_toBottomOf="@id/play_button"
            tools:text="00:00" />

        <TextView
            android:id="@+id/duration_title"
            style="@style/MediaTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="start"
            android:text="@string/duration"
            app:layout_constraintBottom_toTopOf="@id/album_title"
            app:layout_constraintStart_toEndOf="@id/left_border_16"
            app:layout_constraintTop_toBottomOf="@id/bottom_barrier" />

        <TextView
            android:id="@+id/album_title"
            style="@style/MediaTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="start"
            android:text="@string/album"
            app:layout_constraintBottom_toTopOf="@id/year_title"
            app:layout_constraintStart_toEndOf="@id/left_border_16"
            app:layout_constraintTop_toBottomOf="@id/duration_title" />

        <TextView
            android:id="@+id/year_title"
            style="@style/MediaTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="start"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@id/genre_title"
            app:layout_constraintStart_toEndOf="@id/left_border_16"
            app:layout_constraintTop_toBottomOf="@id/album_title" />

        <TextView
            android:id="@+id/genre_title"
            style="@style/MediaTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="start"
            android:text="@string/genre"
            app:layout_constraintBottom_toTopOf="@id/country_title"
            app:layout_constraintStart_toEndOf="@id/left_border_16"
            app:layout_constraintTop_toBottomOf="@id/year_title" />

        <TextView
            android:id="@+id/country_title"
            style="@style/MediaTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="start"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/left_border_16" />

        <TextView
            android:id="@+id/track_duration"
            style="@style/MediaDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="end"
            app:layout_constraintBottom_toTopOf="@id/track_album"
            app:layout_constraintEnd_toStartOf="@id/right_border_16"
            app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
            tools:text="5:35" />

        <TextView
            android:id="@+id/track_album"
            style="@style/MediaDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:ellipsize="end"
            android:gravity="end"
            android:lines="1"
            android:paddingStart="@dimen/padding_8"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/track_year"
            app:layout_constraintEnd_toStartOf="@id/right_border_16"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/album_title"
            app:layout_constraintTop_toBottomOf="@id/track_duration"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/track_year"
            style="@style/MediaDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="end"
            app:layout_constraintBottom_toTopOf="@id/track_genre"
            app:layout_constraintEnd_toStartOf="@id/right_border_16"
            app:layout_constraintTop_toBottomOf="@id/track_album"
            tools:text="1965" />

        <TextView
            android:id="@+id/track_genre"
            style="@style/MediaDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="end"
            app:layout_constraintBottom_toTopOf="@id/track_country"
            app:layout_constraintEnd_toStartOf="@id/right_border_16"
            app:layout_constraintTop_toBottomOf="@id/track_year"
            tools:text="Rock" />

        <TextView
            android:id="@+id/track_country"
            style="@style/MediaDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/right_border_16"
            tools:text="Великобритания" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/top_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_tags="queueButton, playButton, favoriteButton" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bottom_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_tags="currentTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayoutBottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="210dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_8"
            android:background="@drawable/bg_bottom_sheet_rec" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_16"
            android:text="@string/add_to_playlist"
            android:textSize="@dimen/text_size_19" />

        <Button
            android:id="@+id/buttonCreatePlaylist"
            style="@style/searchMenuButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>